# svelte2jupyter

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
demo/: S2J_Demo.ipynb  Untitled.ipynb  barchart.py
demo/compiled/: ChartBar.iife.js
demo/components/: Counter.svelte  MostBeautifulGirld.svelte
examples/: barchart_component.py  load_saved_py_component_demo.ipynb
examples/components/: Barchart.svelte  Chatbot.svelte  Jared.svelte
svelte2jupyter/: __init__.py  buildComponents.js  component_utils.py  constants.py  local.todo  npm_utils.py  package.json  package.py  packaged_component.py  randomize_hash_id.py  render_component.py  svelte_jupyter_widget.py  utils.py
svelte2jupyter/components/: ChartBar.svelte  TestServer.svelte  TopNames.svelte
tests/: test_randomize_hash_id.py
